格式细节调整

--- a/发布优化-秒杀计划/Article/2017-08-30-秒杀计划.md
+++ b/发布优化-秒杀计划/Article/2017-08-30-秒杀计划.md
@@ -159,27 +159,27 @@ class SearchResult implements IteratorAggregate {
 
 ##### 进阶选择2：字典树匹配
 
-用字典树 `TrieTree` 算法进行关键词匹配，字典树可以非常好地减少无谓字符的比较，使得搜索的时间复杂度理论上只和待检索文本的长度有关： `O(m)` ，其中 `m` 为待检索文本的长度。
+用字典树 `TrieTree` 算法进行关键词匹配，字典树可以非常好地减少无谓字符的比较，使得搜索的时间复杂度理论上只和待检索文本的长度有关： O(m) ，其中 m 为待检索文本的长度。
 
 > 字典树入门推荐文章：
 > https://segmentfault.com/a/1190000008877595
 
-本文主要讲优化的思路和策略，对于详细的算法细节不做铺开，字典树详细的实现算法本人写了一个`PHP`版 （https://github.com/summer1914/PHP-TrieTree） ，有兴趣的同学可以看看，欢迎给我提优化建议。
+本文主要讲优化的思路和策略，对于详细的算法细节不做铺开。中英文字典树详细的实现算法本人写了一个`PHP`版 （https://github.com/summer1914/PHP-TrieTree） ，1万词的字典树匹配时间2毫秒左右，有兴趣的同学可以看看，欢迎给我提优化建议。
 
-线下算法匹配性能测试结果如下：
+线下字典树算法匹配性能测试结果如下：
 
 ![字典树匹配测试结果](imgs/trieTreeTest.jpeg)
 
 
 #### 6.4.2 缓存结构优化
 
-字典树的匹配效率虽高，但是若每次加上字典树的 `build` 时间，那么优化的效果又会大打折扣。因此使用时字典树都是提前 `build` ，将建立好的字典树序列化之后存到 `Redis` 缓存，使用时从 `Redis` 取出并且反序列化。
+字典树的匹配效率虽高，但是若每次加上字典树的 `build` 时间，那么优化的效果又会大打折扣。因此使用时字典树都是提前 `build` ，将建立好的字典树序列化之后存到 Redis 缓存，使用时从 Redis 取出并且反序列化。
 
-这里引入了另一个问题（坑），那就是序列化的效率。在之后的测试中发现真正进入使用时，整体匹配的速率没有达到预期的增长。什么原因？查询算法很快， `Redis` 是内存级存储取出速度很快，那么慢的是谁？反序列化！果然测试最大的一颗字典树，从取出到匹配完成总耗时61毫秒，匹配耗时2毫秒+，Redis取出耗时5毫秒+，而反序列化直接占了52毫秒！这个很坑的反序列化函数是我们常用的 `json_decode()` 。
+这里引入了另一个问题（坑），那就是序列化的效率。在之后的测试中发现真正进入使用时，整体匹配的速率没有达到预期的增长。什么原因？查询算法很快， Redis 是内存级存储取出速度很快，那么慢的是谁？反序列化！果然测试最大的一颗字典树，从取出到匹配完成总耗时61毫秒，匹配耗时2毫秒+，Redis取出耗时5毫秒+，而反序列化直接占了52毫秒！这个很坑的反序列化函数是我们常用的 `json_decode()` 。
 
 ##### Memcache VS Redis
 
-为了解决这个问题，想到可以直接将字典树不序列化存到 `Memcache` 中(注： `Memcache` 内部会做序列化和反序列化)。但 `Memcache` 存储不够安全，所以可以将 `Memcache` 作为最上层缓存， `Redis` 作为兜底缓存。在正式执行这个想法之前进行了一波线下测试，测试结果如下图：
+为了解决这个问题，想到可以直接将字典树不序列化存到 Memcache 中(注： Memcache 内部会做序列化和反序列化)。但 Memcache 存储不够安全，所以可以将 Memcache 作为最上层缓存， Redis 作为兜底缓存。在正式执行这个想法之前进行了一波线下测试，测试结果如下图：
 
 ![Memcache 和 Redis 取出速度对比](imgs/cache.jpeg)
 
@@ -189,7 +189,7 @@ class SearchResult implements IteratorAggregate {
 
 ![json_decode() 和 unserialize() 性能对比](imgs/jsondecode.jpeg)
 
-经过了以上测试，最后上线的关键词模块为：匹配算法采用字典树，第一层缓存为 `Memcache` ，第二层缓存为 `Redis\Str` 。上线之后的效果图如下：
+经过了以上测试，最后上线的关键词模块为：匹配算法采用字典树，第一层缓存为 Memcache ，第二层缓存为 Redis \ Str 。上线之后的效果图如下：
 
 ![关键词优化效果图](imgs/keyword.jpeg)
 
